--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "terminal_portfolio",
+  "name": "tsukishima",
   "version": "1.0.0",
   "description": "This is a Terminal Portfolio made by me using JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "custom-command": "echo 'This is a custom command!'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sanjoy Paul",
   "license": "ISC",
