--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsukishima",
+  "name": "sanjoyxp",
   "version": "1.0.0",
   "description": "This is a Terminal Portfolio made by me using JavaScript",
   "main": "index.js",
