--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sanjoy Paul",
   "license": "ISC",
   "dependencies": {
+    "cli-boxes": "^4.0.0",
     "figlet": "^1.7.0",
     "terminal-kit": "^3.1.1"
   }
