--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanjoyxyz",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "This is a Terminal Portfolio made by me using JavaScript",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sanjoy Paul",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "cli-boxes": "^4.0.0",
     "figlet": "^1.7.0",
