Added My portfolio

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "sanjoyxyz",
+  "name": "kazuha",
   "version": "2.0.2",
   "description": "This is a Terminal Portfolio made by me using JavaScript",
   "main": "index.js",
   "bin": {
-    "sanjoyxyz": "./index.js"
+    "kazuha": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sanjoy Paul",
+  "author": "Harajit Das",
   "license": "MIT",
   "dependencies": {
     "cli-boxes": "^4.0.0",
